--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,22 +1,33 @@
-* {
-  background-color: black;
-  margin: 0;
-  padding: 0;
+body {
+  display: flex;
+  justify-content: center;
 }
 
 .wrapper {
-  max-width: 479px;
-  height: 100vh;
   background-color: black;
-  color: white;
-  margin: auto;
-  padding: 0;
+  min-width: 480px;
+  max-width: 480px;
+  min-height: 700px;
+  max-height: 700px;
+  overflow: scroll;
 }
 
-.text {
-  width: 100%;
-  max-height: 100%;
-  background-color: #1e96fc;
-  margin: 0;
-  padding: 0;
+.buttons {
+  color: green;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+button {
+  width: 220px;
+  height: 100px;
+  margin: 20px;
+  border-radius: 10px;
+}
+
+.test {
+  width: 440px;
+  height: 100px;
+  margin: 20px;
 }
