--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -13,31 +13,52 @@ body {
 }
 
 .titleBg {
-  background-color: #036d19;
+  background-color: #1e96fc;
   height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .title {
   color: white;
+  font-size: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .subjects {
-  color: green;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
-button {
-    background-color: ;
+.quiz {
+  background-color: white;
   width: 220px;
   height: 100px;
   margin: 20px;
-  border-radius: 10px;
+  border-radius: 5px;
+  border: 1px solid #1e96fc;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+}
+
+.quiz:hover {
+  background-color: whitesmoke;
+  width: 230px;
 }
 
 .test {
-  width: 440px;
+  width: 400px;
   height: 100px;
   margin: 20px;
+  background-color: white;
+  border: 1px solid #1e96fc;
+  font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.test:hover {
+  background-color: whitesmoke;
+  width: 410px;
 }
