--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -41,7 +41,7 @@ body {
   align-items: center;
 }
 
-.quizButton {
+.mathQuizButton {
   background-color: white;
   width: 220px;
   height: 100px;
@@ -50,9 +50,63 @@ body {
   border: 1px solid #1e96fc;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
+  background-image: url("https://images.pexels.com/photos/374918/pexels-photo-374918.jpeg?auto=compress&cs=tinysrgb&w=1200");
+  background-size: cover;
 }
 
-.quizButton:hover {
+.engQuizButton {
+  background-color: white;
+  width: 220px;
+  height: 100px;
+  margin: 20px;
+  border-radius: 5px;
+  border: 1px solid #1e96fc;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  background-image: url("https://images.pexels.com/photos/159581/dictionary-reference-book-learning-meaning-159581.jpeg?auto=compress&cs=tinysrgb&w=1200");
+  background-size: cover;
+}
+
+.sciQuizButton {
+  background-color: white;
+  width: 220px;
+  height: 100px;
+  margin: 20px;
+  border-radius: 5px;
+  border: 1px solid #1e96fc;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  background-image: url("https://images.pexels.com/photos/2156/sky-earth-space-working.jpg?auto=compress&cs=tinysrgb&w=1200");
+  background-size: cover;
+}
+
+.hisQuizButton {
+  background-color: white;
+  width: 220px;
+  height: 100px;
+  margin: 20px;
+  border-radius: 5px;
+  border: 1px solid #1e96fc;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  background-image: url("https://images.pexels.com/photos/3617568/pexels-photo-3617568.jpeg?auto=compress&cs=tinysrgb&w=1200");
+  background-size: cover;
+}
+
+.sciQuizButton:hover {
+  background-color: whitesmoke;
+  width: 230px;
+}
+
+.hisQuizButton:hover {
+  background-color: whitesmoke;
+  width: 230px;
+}
+.engQuizButton:hover {
+  background-color: whitesmoke;
+  width: 230px;
+}
+.mathQuizButton:hover {
   background-color: whitesmoke;
   width: 230px;
 }
@@ -73,7 +127,7 @@ body {
 }
 
 input {
-  accent-color: #036D19;
+  accent-color: #036d19;
 }
 
 .progress {
