--- a/src/styles/Quiz.module.css
+++ b/src/styles/Quiz.module.css
@@ -1,6 +1,67 @@
+body {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .wrapper {
+    background-color: white;
+    min-width: 480px;
+    max-width: 480px;
+    min-height: 700px;
+    max-height: 700px;
+    overflow: scroll;
+    border: 1px solid black;
+  }
+
+.question {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #1e96fc;
+    height: 80px;
+    color: white;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 20px;
+}
+
 .options {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+    gap: 10px;
+}
+
+@keyframes unhover {
+    0% {
+        width: 80%;
+    }
+    100% {
+        width: 70%;
+    }
+}
+
+.answers {
+    animation: unhover 0.3s ease-in;
+    width: 70%;
+    height: 17vh;
+    font-size: 2rem;
+}
+
+@keyframes hover {
+    0% {
+        width: 70%;
+    }
+    100% {
+        width: 80%;
+    }
+}
+
+.answers:hover {
+    animation: hover 0.3s ease-in;
+    width: 80%;
 }
 
 .correct {
